--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>HABIT El Salvador</title>
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:image" content="./images/SocialSEO.jpg">
 
     <!-- mobile specific metas
     ================================================== -->
