--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>HABIT El Salvador</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:image" content="./images/SocialSEO.jpg">
+    <meta property="og:image" content="./images/SEO.jpg">
 
     <!-- mobile specific metas
     ================================================== -->
