--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="home-content">
 
             <div class="home-logo">
-                <a href="index-slides.html">
+                <a href="index.html">
                     <h3>HABIT El Salvador</h3>
                 </a>
             </div>
