--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="home-logo">
                 <a href="#">
-                    <h3>HABIT El Salvador</h3>
+                    <h3>HABIT</h3>
                 </a>
             </div>
 
